2 этап(iter 55)